--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,120 @@
-.showtable{
+/*body开始*/
+.body{
+	/*背景颜色*/
+	/*background-image:url(../meihua1.jpg);
+	background-repeat: no-repeat;
+	background-size:100% 100%;
+	background-position: 50% 30%;
+	opacity:0.5;
+	filter:alpha(opacity=50);*/
+	background-color: #FFFFCC;
+	
+}
+/*body结束*/
+
+/*最外层的DIV*/
+
+#sidediv{
+	width: 100%;
+}
+/*头部开始*//*	z-index:9999;	在早高层	-1最底	*/
+#head{
+	position:fixed;
+	top:0;
+	z-index:9999;
+	width: 100%;
+	height: 40px;
+	line-height: 40px;
+	background-color: #E8F2FE; 
+}
+#head span:hover{
+	border:1px solid black;
+	color: blue;
+}
+/*头部结束*/
+
+/*重要部分*/
+#important{
+	position:absolute;
+	top:50px;
+	width: 100%;
+	height: 255px;
+	margin: 0 auto;
+	
+	background-image: url("../image/indeximg/bj_import.png");
+	background-repeat:no-repeat;
+}
+
+
+/*中部开始*/
+#main{
+	position:absolute;
+	margin-left: 115px;
+	border: 1px dashed purple;
+	top:310px;
+	width: 1100px;
+	
+}
+/*中间左侧*/
+#mian_left{
+	width:198px;
+	float:left;
+	margin-left: 70px;
+	margin-top: 10px;
+	padding: 10px;
+	background-image: url("../image/indeximg/bj_main_left.png");
+	background-repeat:no-repeat;
 
 }
+/*中间中部*/
+#mian_center{
+	width:450px;
+	float:left;
+	margin: 10px;
+	padding: 10px;
+	background-color: #BECDD9;
+	border: 1px dashed red;
+}
+/*中间部分文字margin: 0 auto;*/
+.main_wenzi{
+	
+	margin-left: 100px;
+	width:180px;
+	font-size: 16px;
+	font-weight: bolder;
+	line-height: 25px;
+	color:blue;
+}
+
+/*中间右侧*/
+#mian_right{
+	width:242px;
+	float:left;
+	margin: 10px;
+	padding: 10px;
+	background-image: url("../image/indeximg/bj_main_right.jpg");
+	background-repeat:no-repeat;
+}
+/*中部结束*/
+
+/*清除中间部分浮动*/
+.clearfloat{
+	clear: both;
+}
+
+/*底部开始*/
+#foot{
+	position:fixed;
+	bottom:0;
+	width: 100%;
+	background-color: #E8F2FE;
+}
+#foot_main{
+	width:300px;
+	margin: 0 auto;
+	color: red;
+	font-weight: bolder;
+}
+/*底部结束*/
+
+ 
